fix: sidebar visibility bug

--- a/src/components/ContactUs/index.scss
+++ b/src/components/ContactUs/index.scss
@@ -1,5 +1,5 @@
 .contact {
-  padding: 64px 0 64px 246px;
+  padding: 64px 0 64px 36px;
   color: #FFFFFF;
 
   .contact-left {
